--- a/src/app/sdk-tags/ux-weatherInfo/ux-weatherInfo.component.html
+++ b/src/app/sdk-tags/ux-weatherInfo/ux-weatherInfo.component.html
@@ -6,6 +6,11 @@
     <div class="ux-weatherInfo__container">
     <ul>
         <li *ngFor="let weather of printData">
+          <!--
+            in order to leave the component open as much as possible
+            it' d be better to do a foreach and read the key value from the input object intead to print statically the values.
+            I haven't done it just because i have to deliver within tomorrow moring.
+          -->
           {{ weather.date  | date:'dd-MM-yyyy' }}
           ---- Min : {{ weather.temp_min }} °C
           ---- Max : {{ weather.temp_max }} °C
