--- a/src/app/sdk-tags/ux-weatherInfo/ux-weatherInfo.component.scss
+++ b/src/app/sdk-tags/ux-weatherInfo/ux-weatherInfo.component.scss
@@ -1,11 +1,18 @@
 .ux-weatherInfo { 
     &__label {
-        padding:10px;
+        padding-top:30px;
         text-transform: uppercase;
+        font-size: 19px;
     }
-    &__container {
+    &__results {
         padding:5px;
         border:2px solid black;
+
+        &--icon {
+            border:1px black;
+        }
     }
+
+    
     
 }
